# freuid-challenge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker_build.sh  pyproject.toml  report.html
checkpoints/: epoch-7.pt
scripts/: infer.py  prepare_metadata.py  train_online.py
src/freuid/eval/: metrics.py
src/freuid/mil/: __init__.py  domain_adversarial.py  model.py
src/freuid/models/: __init__.py  backbones.py
technical-report/: freuid_technical_report.tex
