[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freuid-challenge"
version = "1.0.0"
description = "FREUID Challenge 2026 — DA-MIL Document Fraud Detection"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/freuid"]

# PyTorch CUDA 12.8 (commenta se usi CPU o altra versione CUDA)
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
